src/Disclaimer.css
.disclaimer
{
    opacity: 1;
    transition: opacity 0.5s ease-in-out;
}

.disclaimer.hidden
{
    opacity: 0;
    pointer-events: none;
}


.disclaimer-background
{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 999;
}


.disclaimer-text
{
    position: fixed;
    top: 35%;
    left: 50%;
    transform: translateX(-50%);
    background-color: rgba(255, 255, 255, 1);
    padding: 10px 20px;
    border-radius: 5px;
    z-index: 1000;
}

.disclaimer-text button
{
    display: block;
    margin: 30px auto 10px auto;
    padding: 10px 20px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 3px;
    cursor: pointer;
}

